[package]
name = "gateway"
version = "0.1.0"
authors = ["Eric Rabil <ericjrabil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
snowflake = "1.2"
tokio-stream = "0.1.1"
lazy_static = "*"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-recursion = "0.3.2"
redis-async = { git = "https://github.com/EricRabil/redis-async-rs" }
tokio-core = { version = "0.1" }
