[package]
name = "rest"
version = "0.1.0"
authors = ["Eric Rabil <ericjrabil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
redis = { version = "*", features = ["tokio-comp"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.43"
jsonwebtoken = "7"
serde = { version = "1", features = ["derive"] }
lazy_static = "*"

[global.limits]
json = 5242880
string = 5242880